fix: se hicieron arreglos para las issues de sonnarqube